--- a/DL.ipynb
+++ b/DL.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -290,13 +290,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "BKf-PzIF_Fej",
         "outputId": "cfc7e419-d48e-4ba7-cd2f-60e99990043d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +473,7 @@
         "id": "z69MskVmDkmD",
         "outputId": "29f1306b-aa2e-48e6-c23f-d774d45da501"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -619,7 +618,7 @@
         "id": "C3CL91nUD5a-",
         "outputId": "266907e6-8e2e-44ac-8ac0-9e55e8fccf22"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +769,7 @@
         "id": "8Tj2GlfwRwVF",
         "outputId": "6160321c-1acd-488d-f3f7-b52144bfb167"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -798,7 +797,7 @@
       "metadata": {
         "id": "jB7c07RGGOZP"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     }
   ]
